--- a/regressiontests/adoc/antora.yml
+++ b/regressiontests/adoc/antora.yml
@@ -15,5 +15,5 @@
 #  specific language governing permissions and limitations
 #  under the License.
 
-name: core
+name: regressiontests
 version: latest
