--- a/regressiontests/stable-cmdexecauditsess/pom.xml
+++ b/regressiontests/stable-cmdexecauditsess/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.apache.isis.regressiontests</groupId>
         <artifactId>isis-regressiontests</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.0-M8</version>
     </parent>
 
     <artifactId>isis-regressiontests-cmdexecauditsess</artifactId>
@@ -44,7 +44,7 @@
             <dependency>
                 <groupId>org.apache.isis.regressiontests</groupId>
                 <artifactId>isis-regressiontests-cmdexecauditsess-generic</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>2.0.0-M8</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
