--- a/regressiontests/stable-viewers-jdo/pom.xml
+++ b/regressiontests/stable-viewers-jdo/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>org.apache.isis.regressiontests</groupId>
 		<artifactId>isis-regressiontests</artifactId>
-		<version>2.0.0-SNAPSHOT</version>
+		<version>2.0.0-M8</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
