--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -20,7 +20,7 @@
 		in build-artifacts.sh -->
 	<groupId>org.apache.isis.app</groupId>
 	<artifactId>isis-app-starter-parent</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.0.0-M8</version>
 	<packaging>pom</packaging>
 
 	<parent>
