ISIS-3169: keycloak and secman improvements.
Also renamed shiro secman integration artifact, for consistency.

--- a/regressiontests/incubating/src/test/resources/shiro-secman-ldap-cached.ini
+++ b/regressiontests/incubating/src/test/resources/shiro-secman-ldap-cached.ini
@@ -28,13 +28,13 @@ contextFactory.systemPassword = secret
 
 ldapRealm = org.apache.isis.extensions.shirorealmldap.realm.impl.IsisLdapRealm
 ldapRealm.contextFactory = $contextFactory
-ldapRealm.searchBase = ou=groups,o=mojo                    
-ldapRealm.groupObjectClass = groupOfUniqueNames            
-ldapRealm.uniqueMemberAttribute = uniqueMember             
+ldapRealm.searchBase = ou=groups,o=mojo
+ldapRealm.groupObjectClass = groupOfUniqueNames
+ldapRealm.uniqueMemberAttribute = uniqueMember
 ldapRealm.uniqueMemberAttributeValueTemplate = uid={0}
 
-authenticationStrategy=org.apache.isis.extensions.secman.shiro.AuthenticationStrategyForIsisModuleSecurityRealm
-isisModuleSecurityRealm=org.apache.isis.extensions.secman.shiro.IsisModuleExtSecmanShiroRealm
+authenticationStrategy=org.apache.isis.extensions.secman.delegated.shiro.realm.AuthenticationStrategyForSecMan
+isisModuleSecurityRealm=org.apache.isis.extensions.secman.delegated.shiro.realm.IsisModuleExtSecmanShiroRealm
 isisModuleSecurityRealm.delegateAuthenticationRealm=$ldapRealm
 isisModuleSecurityRealm.authenticationCachingEnabled = true
 
