--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -375,7 +375,12 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.extensions</groupId>
-				<artifactId>isis-extensions-secman-shiro-realm</artifactId>
+				<artifactId>isis-extensions-secman-delegated-shiro</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.extensions</groupId>
+				<artifactId>isis-extensions-secman-spring-autocreator</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 
