--- a/extensions/security/secman/pom.xml
+++ b/extensions/security/secman/pom.xml
@@ -79,7 +79,12 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.isis.extensions</groupId>
-                <artifactId>isis-extensions-secman-shiro-realm</artifactId>
+                <artifactId>isis-extensions-secman-delegated-shiro</artifactId>
+                <version>2.0.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.isis.extensions</groupId>
+                <artifactId>isis-extensions-secman-spring-autocreator</artifactId>
                 <version>2.0.0-SNAPSHOT</version>
             </dependency>
 
@@ -116,5 +121,6 @@
     	<module>persistence-jdo</module>
     	<module>persistence-jpa</module>
     	<module>shiro-realm</module>
+    	<module>spring-autocreator</module>
     </modules>
 </project>
