--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -339,14 +339,14 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <danhaywood-java-assertjext.version>0.1.0</danhaywood-java-assertjext.version>
         <danhaywood-java-testsupport.version>1.0.0</danhaywood-java-testsupport.version>
 
-        <datanucleus-api-jdo.version>6.0.0-release</datanucleus-api-jdo.version>
-        <datanucleus-api-jpa.version>6.0.0-release</datanucleus-api-jpa.version>
-        <datanucleus-core.version>6.0.0-release</datanucleus-core.version>
+        <datanucleus-api-jdo.version>6.0.1</datanucleus-api-jdo.version>
+        <datanucleus-api-jpa.version>6.0.1</datanucleus-api-jpa.version>
+        <datanucleus-core.version>6.0.1</datanucleus-core.version>
         <datanucleus-jdo-api.version>3.2.1</datanucleus-jdo-api.version>
-        <datanucleus-jdo-query.version>6.0.0-release</datanucleus-jdo-query.version>
+        <datanucleus-jdo-query.version>6.0.1</datanucleus-jdo-query.version>
         <datanucleus-jodatime.version>6.0.0-release</datanucleus-jodatime.version>
         <datanucleus-maven-plugin.version>6.0.0-release</datanucleus-maven-plugin.version>
-        <datanucleus-rdbms.version>6.0.0-release</datanucleus-rdbms.version>
+        <datanucleus-rdbms.version>6.0.1</datanucleus-rdbms.version>
 
         <docx4j.version>11.3.2</docx4j.version>
 
