--- a/starters/pom.xml
+++ b/starters/pom.xml
@@ -153,9 +153,9 @@
 			<properties>
 
 				<!-- keep in sync with versions used in Apache Isis -->
-				<datanucleus-api-jdo.version>6.0.0-release</datanucleus-api-jdo.version>
-				<datanucleus-api-jpa.version>6.0.0-release</datanucleus-api-jpa.version>
-				<datanucleus-core.version>6.0.0-release</datanucleus-core.version>
+				<datanucleus-api-jdo.version>6.0.1</datanucleus-api-jdo.version>
+				<datanucleus-api-jpa.version>6.0.1</datanucleus-api-jpa.version>
+				<datanucleus-core.version>6.0.1</datanucleus-core.version>
 				<datanucleus-jodatime.version>6.0.0-release</datanucleus-jodatime.version>
 				<datanucleus-maven-plugin.version>6.0.0-release</datanucleus-maven-plugin.version>
 
