--- a/core/pom.xml
+++ b/core/pom.xml
@@ -519,7 +519,22 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.viewer</groupId>
+				<artifactId>isis-viewer-commons-applib</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.viewer</groupId>
 				<artifactId>isis-viewer-commons-model</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.viewer</groupId>
+				<artifactId>isis-viewer-commons-prism</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.viewer</groupId>
+				<artifactId>isis-viewer-commons-services</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
