--- a/incubator/viewers/vaadin/ui/pom.xml
+++ b/incubator/viewers/vaadin/ui/pom.xml
@@ -124,8 +124,12 @@
 		
 		<dependency>
 			<groupId>org.apache.isis.viewer</groupId>
+            <artifactId>isis-viewer-commons-services</artifactId>
+        </dependency>
+        
+        <dependency>
+			<groupId>org.apache.isis.viewer</groupId>
             <artifactId>isis-viewer-commons-prism</artifactId>
-            <version>${project.version}</version>
         </dependency>
 
 		<dependency>
