--- a/viewers/commons/model/pom.xml
+++ b/viewers/commons/model/pom.xml
@@ -36,6 +36,11 @@
     </properties>
 
     <dependencies>
+    
+    	<dependency>
+            <groupId>org.apache.isis.viewer</groupId>
+            <artifactId>isis-viewer-commons-applib</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.isis.core</groupId>
