--- a/viewers/commons/services/pom.xml
+++ b/viewers/commons/services/pom.xml
@@ -22,29 +22,31 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.apache.isis.core</groupId>
-        <artifactId>isis-core</artifactId>
+    	<groupId>org.apache.isis.viewer</groupId>
+    	<artifactId>isis-viewer-commons</artifactId>
         <version>2.0.0-SNAPSHOT</version>
-        <relativePath>../../core/pom.xml</relativePath>
     </parent>
 
-    <groupId>org.apache.isis.viewer</groupId>
-    <artifactId>isis-viewer-commons</artifactId>
-    <name>Apache Isis Viewer - Commons</name>
-    
-    <packaging>pom</packaging>
+    <artifactId>isis-viewer-commons-services</artifactId>
+    <name>Apache Isis Viewer - Commons Services</name>
 
     <properties>
+        <jar-plugin.automaticModuleName>org.apache.isis.viewer.commons.services</jar-plugin.automaticModuleName>
+        <git-plugin.propertiesDir>org/apache/isis/viewer/commons/services</git-plugin.propertiesDir>
     </properties>
 
     <dependencies>
+    
+    	<dependency>
+            <groupId>org.apache.isis.viewer</groupId>
+            <artifactId>isis-viewer-commons-model</artifactId>
+        </dependency>
+    
+		<dependency>
+            <groupId>org.apache.isis.core</groupId>
+            <artifactId>isis-core-runtime</artifactId>
+        </dependency>
+
     </dependencies>
-  
-    <modules>
-    	<module>applib</module>
-    	<module>model</module>
-    	<module>prism</module>
-    	<module>services</module>
-    </modules>
 
 </project>
