--- a/viewers/wicket/ui/pom.xml
+++ b/viewers/wicket/ui/pom.xml
@@ -74,8 +74,12 @@
 		
 		<dependency>
 			<groupId>org.apache.isis.viewer</groupId>
+            <artifactId>isis-viewer-commons-services</artifactId>
+        </dependency>
+		
+		<dependency>
+			<groupId>org.apache.isis.viewer</groupId>
             <artifactId>isis-viewer-commons-prism</artifactId>
-            <version>${project.version}</version>
         </dependency>
 		
 		<dependency>
