--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ gradlew.*
 #Asciidoctor Plugins
 .asciidoctorconfig.adoc
 
+#Draw.io
+.$*
+
 #Lombok (don't accept config alterations, might lead to a maintenance hell)
 lombok.config
 
