--- a/viewers/wicket/ui/pom.xml
+++ b/viewers/wicket/ui/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
-	license agreements. See the NOTICE file distributed with this work for additional 
-	information regarding copyright ownership. The ASF licenses this file to 
-	you under the Apache License, Version 2.0 (the "License"); you may not use 
-	this file except in compliance with the License. You may obtain a copy of 
-	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
-	by applicable law or agreed to in writing, software distributed under the 
-	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
-	OF ANY KIND, either express or implied. See the License for the specific 
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor
+	license agreements. See the NOTICE file distributed with this work for additional
+	information regarding copyright ownership. The ASF licenses this file to
+	you under the Apache License, Version 2.0 (the "License"); you may not use
+	this file except in compliance with the License. You may obtain a copy of
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required
+	by applicable law or agreed to in writing, software distributed under the
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS
+	OF ANY KIND, either express or implied. See the License for the specific
 	language governing permissions and limitations under the License. -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -52,9 +52,9 @@
 				<artifactId>yuicompressor-maven-plugin</artifactId>
 			</plugin>
 			<plugin>
-				<!-- overrides defaults as configured in our core pom, 
+				<!-- overrides defaults as configured in our core pom,
         			to make javadoc failures non fatal and let the build continue;
-        			this we can set on a per module basis, to apply only to those, 
+        			this we can set on a per module basis, to apply only to those,
         			we don't know how to fix otherwise -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
@@ -71,17 +71,17 @@
 			<groupId>org.apache.isis.viewer</groupId>
 			<artifactId>isis-viewer-wicket-model</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.isis.viewer</groupId>
             <artifactId>isis-viewer-commons-services</artifactId>
         </dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.isis.viewer</groupId>
             <artifactId>isis-viewer-commons-prism</artifactId>
         </dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.wicket</groupId>
 			<artifactId>wicket-devutils</artifactId>
@@ -137,7 +137,7 @@
 					<artifactId>slf4j-api</artifactId>
 				</exclusion>
 				<exclusion>
-					<!-- for Java7 compatibility (we don't use the proxying capability of 
+					<!-- for Java7 compatibility (we don't use the proxying capability of
 						this component) -->
 					<groupId>cglib</groupId>
 					<artifactId>cglib</artifactId>
@@ -167,6 +167,11 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>select2</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>datatables</artifactId>
 		</dependency>
 
 		<dependency>
@@ -344,7 +349,7 @@
 			<artifactId>isis-core-internaltestsupport</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.apache.isis.core</groupId>
 			<artifactId>isis-core-runtimeservices</artifactId>
