--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1283,6 +1283,12 @@
 
 			<dependency>
 				<groupId>org.webjars</groupId>
+				<artifactId>datatables</artifactId>
+				<version>${datatables.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.webjars</groupId>
 				<artifactId>jquery</artifactId>
 				<version>${wicket-viewer-jquery.version}</version>
 			</dependency>
