--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -348,7 +348,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
         <datanucleus-maven-plugin.version>6.0.0-release</datanucleus-maven-plugin.version>
         <datanucleus-rdbms.version>6.0.1</datanucleus-rdbms.version>
 
-        <datatables.version>1.12.1</datatables.version>
+        <datatables.version>1.12.1</datatables.version> <!-- keep in sync with DatatablesDotNet -->
 
         <docx4j.version>11.3.2</docx4j.version>
 
