--- a/core/jdk-supplemental/pom.xml
+++ b/core/jdk-supplemental/pom.xml
@@ -165,6 +165,10 @@
 					<groupId>com.sun.xml.bind.external</groupId>
 					<artifactId>rngom</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>jakarta.annotation</groupId>
+					<artifactId>jakarta.annotation-api</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -201,9 +205,24 @@
 		</dependency>
 		
 		<!-- v8.0.0 provides @Inject, @Qualifier, ... that's required by Spring 5.x -->
-        <dependency>
-            <groupId>jakarta.platform</groupId>
-            <artifactId>jakarta.jakartaee-api</artifactId>
+<!--         <dependency> -->
+<!--             <groupId>jakarta.platform</groupId> -->
+<!--             <artifactId>jakarta.jakartaee-api</artifactId> -->
+<!--         </dependency> -->
+     	<dependency>
+		    <groupId>javax.inject</groupId>
+		    <artifactId>javax.inject</artifactId>
+		    <version>1</version>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+		</dependency>
+		<!-- MediaType support -->
+		<dependency>
+            <groupId>org.jboss.spec.javax.ws.rs</groupId>
+            <artifactId>jboss-jaxrs-api_2.1_spec</artifactId>
+            <version>2.0.1.Final</version>
         </dependency>
 		
 		<!-- provides @Nullable that's required by Spring 5.x -->
