ISIS-3207: dependency and build fixes

--- a/core/webapp/pom.xml
+++ b/core/webapp/pom.xml
@@ -94,6 +94,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <scope>provided</scope>
+		</dependency>
 
 		<!-- TESTING -->
 
