--- a/testing/h2console/ui/pom.xml
+++ b/testing/h2console/ui/pom.xml
@@ -55,6 +55,12 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
