ISIS-3207: keep automaticModuleName manifest entries (revert removal)
- I guess these don't hurt - and are used as a fallback

--- a/api/schema/pom.xml
+++ b/api/schema/pom.xml
@@ -30,6 +30,7 @@
     </description>
 
 	<properties>
+		<jar-plugin.automaticModuleName>org.apache.isis.schema</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/isis/schema</git-plugin.propertiesDir>
 	</properties>
 
