--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -30,6 +30,7 @@
     </description>
 
 	<properties>
+		<jar-plugin.automaticModuleName>org.apache.isis.commons</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/isis/commons</git-plugin.propertiesDir>
 	</properties>
 
