--- a/core/codegen-bytebuddy/pom.xml
+++ b/core/codegen-bytebuddy/pom.xml
@@ -28,6 +28,7 @@
     </description>
 
 	<properties>
+	    <jar-plugin.automaticModuleName>org.apache.isis.core.codegen.bytebuddy</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/isis/core/codegen/bytebuddy</git-plugin.propertiesDir>
 	</properties>
 
