--- a/core/runtime/pom.xml
+++ b/core/runtime/pom.xml
@@ -33,6 +33,7 @@
     </description>
 
     <properties>
+        <jar-plugin.automaticModuleName>org.apache.isis.core.runtime</jar-plugin.automaticModuleName>
         <git-plugin.propertiesDir>org/apache/isis/core/runtime</git-plugin.propertiesDir>
     </properties>
 
