--- a/api/applib/pom.xml
+++ b/api/applib/pom.xml
@@ -36,6 +36,7 @@
     </description>
 
     <properties>
+        <jar-plugin.automaticModuleName>org.apache.isis.applib</jar-plugin.automaticModuleName>
         <git-plugin.propertiesDir>org/apache/isis/applib</git-plugin.propertiesDir>
     </properties>
 
