ISIS-3207: webapp make servlet api transitive

--- a/core/webapp/pom.xml
+++ b/core/webapp/pom.xml
@@ -98,7 +98,7 @@
 		<dependency>
 		    <groupId>javax.servlet</groupId>
 		    <artifactId>javax.servlet-api</artifactId>
-		    <scope>provided</scope>
+		    <scope>compile</scope> <!-- compile: makes it transitive -->
 		</dependency>
 
 		<!-- TESTING -->
