--- a/persistence/jdo/applib/pom.xml
+++ b/persistence/jdo/applib/pom.xml
@@ -97,7 +97,11 @@
 			<optional>true</optional>
 		</dependency>
 
-
+		<!-- provides @Digits -->
+		<dependency>
+		    <groupId>jakarta.validation</groupId>
+		    <artifactId>jakarta.validation-api</artifactId>
+	    </dependency>
 
 	</dependencies>
 
