--- a/persistence/jdo/spring/pom.xml
+++ b/persistence/jdo/spring/pom.xml
@@ -94,18 +94,18 @@
 			<artifactId>spring-web</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- TESTING -->
 
 		<dependency>
 			<groupId>org.apache.isis.core</groupId>
 			<artifactId>isis-core-internaltestsupport</artifactId>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
 			<scope>test</scope>
 		</dependency>
 
