--- a/viewers/wicket/ui/pom.xml
+++ b/viewers/wicket/ui/pom.xml
@@ -355,10 +355,11 @@
 			<artifactId>isis-core-runtimeservices</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
+			<groupId>org.apache.isis.valuetypes</groupId>
+			<artifactId>isis-valuetypes-jodatime-integration</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
