--- a/persistence/jpa/eclipselink/pom.xml
+++ b/persistence/jpa/eclipselink/pom.xml
@@ -92,6 +92,18 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+        <dependency>
+        	<!-- provides javax.enterprise.inject.* -->
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>2.0.2</version> <!-- do not upgrade before Spring 6 -->
+        </dependency>
+        <dependency>
+        	<!-- provides javax.el.* -->
+		    <groupId>jakarta.el</groupId>
+		    <artifactId>jakarta.el-api</artifactId>
+		    <version>3.0.3</version> <!-- do not upgrade before Spring 6 -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
