ISIS-3207: fix inject provided by more than one module

--- a/core/jdk-supplemental/pom.xml
+++ b/core/jdk-supplemental/pom.xml
@@ -221,6 +221,10 @@
             		<groupId>jakarta.inject</groupId>
 		    		<artifactId>jakarta.inject-api</artifactId>
             	</exclusion>
+            	<exclusion>
+            		<groupId>javax.inject</groupId>
+            		<artifactId>javax.inject</artifactId>
+            	</exclusion>
             </exclusions>
         </dependency>
         <dependency>
