--- a/viewers/wicket/ui/pom.xml
+++ b/viewers/wicket/ui/pom.xml
@@ -374,7 +374,7 @@
 			<groupId>org.apache.isis.valuetypes</groupId>
 			<artifactId>isis-valuetypes-jodatime-integration</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
