--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -420,7 +420,7 @@ It is therefore a copy of org.apache:apache, with customisations clearly identif
 
         <vaadin.version>23.2.0</vaadin.version>
 
-        <wicket.version>9.4.0</wicket.version> <!--  last known good, before wicket put jupiter-api on the module graph -->
+        <wicket.version>9.11.0</wicket.version> <!--  9.4.0 is last known good, before wicket put jupiter-api on the module graph -->
         <wicket-bootstrap.version>6.0.0-M8</wicket-bootstrap.version> <!-- de.agilecoders.wicket:wicket-bootstrap... -->
         <wicket-webjars.version>3.0.4</wicket-webjars.version>
         <wicket-viewer-jquery.version>3.6.1</wicket-viewer-jquery.version> <!--  as served by wicket via webjars -->
