--- a/valuetypes/jodatime/integration/pom.xml
+++ b/valuetypes/jodatime/integration/pom.xml
@@ -24,6 +24,7 @@
 	<name>Apache Isis Val - Joda Time (integration)</name>
 
 	<properties>
+		<jar-plugin.automaticModuleName>org.apache.isis.valuetypes.jodatime.integration</jar-plugin.automaticModuleName>
 		<git-plugin.propertiesDir>org/apache/isis/valuetypes/jodatime/integration</git-plugin.propertiesDir>
 	</properties>
 
