--- a/core/pom.xml
+++ b/core/pom.xml
@@ -499,6 +499,11 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.isis.core</groupId>
+				<artifactId>isis-core-internaltestvintage</artifactId>
+				<version>2.0.0-SNAPSHOT</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.isis.core</groupId>
 				<artifactId>isis-core-metamodel</artifactId>
 				<version>2.0.0-SNAPSHOT</version>
 				<type>jar</type>
@@ -1644,6 +1649,7 @@
 		<module>config</module>
 		<module>interaction</module>
 		<module>internaltestsupport</module>
+		<module>internaltestvintage</module>
 		<module>metamodel</module>
 		<module>runtime</module>
 		<module>runtimeservices</module>
